--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -13,7 +13,7 @@
         </div>
         <div class="col s6 text-center" class='task'>
             {{#each burger_data}} {{#if this.devoured}}
-            <div class="BurgerDevoured">
+            <div class="burgerDevoured">
                 <div>
                     {{this.burger_name}}
                 </div>
@@ -29,6 +29,6 @@
             <input type="text" name="burger-name" class="form-control" value="" id="enter_text">
             <button type="submit" class="btn btn-primary" id="text-enter-button">SUBMIT</button>
         </form>
-        <p>Enter a mouth-watering burger you will inhale!</p>
+        <p>Enter a mouth-watering burger you will devour!</p>
     </div>
 </div>
